--- a/npm/npmteste/package.json
+++ b/npm/npmteste/package.json
@@ -2,10 +2,15 @@
   "name": "npmteste",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "moment": "^2.23.0",
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.2.1"
+  }
 }
